<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_logo_round" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="5dp"
        android:text="@string/AppName"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textFontWeight="@android:integer/config_mediumAnimTime"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/card_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.357" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_login"
        android:layout_width="346dp"
        android:layout_height="318dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="145dp"
                android:layout_height="32dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/emailId"
                app:layout_constraintHorizontal_bias="0.677"
                app:layout_constraintStart_toEndOf="@+id/emailId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="73dp"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:textColor="@android:color/black"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/emailId"
                app:layout_constraintHorizontal_bias="0.625"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/EmailText" />

            <EditText
                android:id="@+id/emailId"
                android:layout_width="181dp"
                android:layout_height="54dp"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="32dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="@string/PasswordText" />

            <EditText
                android:id="@+id/studentID"
                android:layout_width="177dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/studentID"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailId" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="214dp"
                android:layout_height="59dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>