<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_question"
        android:layout_width="361dp"
        android:layout_height="129dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_row"
            android:layout_width="334dp"
            android:layout_height="109dp"
            android:layout_margin="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/profileName"
                android:layout_width="183dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="29dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileId"
                android:layout_width="112dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="11dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileName" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="29dp"
                android:src="@drawable/user_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginTop="39dp"
                android:src="@android:drawable/ic_menu_edit"
                app:layout_constraintStart_toEndOf="@+id/profileName"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/rewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/rewards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_question" />

    <TextView
        android:id="@+id/rewardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:text="@string/rewardText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_question" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rewards" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="186dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notification"
        app:layout_constraintTop_toBottomOf="@+id/rewardText" />

</androidx.constraintlayout.widget.ConstraintLayout>